--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ header {
     width: 50px;
 }
 
-.blue-block {
-    background-color: #5c7e99;
+.green-block {
+    background-color: #20662c;
     padding-left: 25px;
     padding-right: 10px;
 }
 
-.blue-block h1 {
-    color: white;
+.green-block h1 {
+    color: rgb(234, 194, 238);
     text-align: right;
 }
 
@@ -27,13 +27,14 @@ h2 {
     font-size: 48px;
 }
 
-.sky-block {
-    background-color: rgb(183, 236, 236);
+.purple-block {
+    background-color: rgb(234, 194, 238);
     padding-left: 10px;
+    color: rgb(24, 93, 24);
 }
 
-.sky-block h2 {
-    color: white;
+.purple-block h2 {
+    color: rgb(24, 93, 24);
     text-align: left;
 }
 
@@ -41,7 +42,7 @@ h2 {
     display: flex;
     width: 1280px;
     margin: 0 auto;
-    color: white;
+    color: rgb(234, 194, 238);
 }
 
 .content-item {
@@ -69,7 +70,7 @@ ul {
 
 .link-my-project {
     text-decoration: none;
-    color: white;
+    color: rgb(24, 93, 24);
 }
 
 .about-myself,
