--- a/travel/styles.css
+++ b/travel/styles.css
@@ -133,6 +133,7 @@ h1 {
     margin-right: 18px;
     margin-left: auto;
     margin-top: 18px;
+    margin-bottom: 254px;
 }
 
 .preview_content_button button {
@@ -147,6 +148,55 @@ h1 {
     box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
     border-radius: 10px;
     border: none;
+}
+
+.steps_content {
+    margin-top: 334px;
+    text-align: center;
+}
+
+h2 {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    color: #F2785C;
+}
+
+.steps_content_items {
+    margin-left: 131px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.steps_content_item_bike,
+.steps_content_item_calendar,
+.steps_content_item_plain {
+    margin-top: 40px;
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background: #F2785C;
+    border-radius: 16px;
+}
+
+.bike,
+.calendar,
+.plain {
+    position: absolute;
+    left: 25%;
+    right: 25%;
+    top: 28%;
+    bottom: 27%;
+}
+
+.steps_content_text {
+    margin-top: 30px;
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    color: #0D606F;
 }
 
 @font-face {
