--- a/travel/styles.css
+++ b/travel/styles.css
@@ -3,21 +3,21 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #FFFFFF;
 }
 
 .wrapper {
-    background-image: url(./images/main-bg.png);
-    min-height: 765px;
     width: 1440px;
     margin: 0 auto;
     position: relative;
 }
 
 main {
-    position: absolute;
-    top: 0;
     width: 100%;
 }
 
@@ -35,6 +35,10 @@ header {
     background: rgba(242, 120, 92, 0.7);
     color: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .header_content {
@@ -55,6 +59,15 @@ header {
     font-weight: 500;
     font-size: 16px;
     line-height: 21px;
+}
+
+a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+a:hover {
+    font-style: italic;
 }
 
 .logo_wrapper {
@@ -84,6 +97,10 @@ header {
     font-family: 'Red Hat Text';
     font-size: 16px;
     color: #FFFFFF;
+}
+
+.preview {
+    background-image: url(./images/main_background.jpg);
 }
 
 .preview_content {
@@ -169,15 +186,21 @@ h2 {
 }
 
 .steps_content_items {
-    margin-left: 131px;
+    margin-top: 40px;
     display: flex;
     justify-content: space-between;
+}
+
+.steps_content_item {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .steps_content_item_bike,
 .steps_content_item_calendar,
 .steps_content_item_plain {
-    margin-top: 40px;
     position: relative;
     width: 100px;
     height: 100px;
@@ -268,17 +291,29 @@ h2 {
     background: #F2785C;
 }
 
+.button {
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #6fa5af;
+}
+
+.button:active {
+    background-color: #243c3e;
+    box-shadow: 0 2px #666;
+    transform: translateY(2px);
+}
+
 .destinations_button,
 .stories_button {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 40px;
 }
 
-.button {
-    width: 228px;
-    height: 59px;
+.destinations_button {
+    margin-top: 40px;
 }
 
 .destinations_button img,
@@ -291,6 +326,11 @@ h2 {
     text-align: center;
 }
 
+.stories_content_bg {
+    background-image: url(./images/stories.jpg);
+    padding-bottom: 61px;
+}
+
 .stories_content_items {
     margin-top: 40px;
     padding-left: 120px;
@@ -298,7 +338,6 @@ h2 {
     padding-right: 125px;
     display: flex;
     flex-direction: column;
-    background-image: url(./images/stories.jpg);
     gap: 30px;
     position: relative;
 }
@@ -352,11 +391,42 @@ h3 {
 
 .stories_button {
     filter: drop-shadow(0px 0px 0px #0D606F);
+    margin-top: 10px;
+    margin-bottom: 41px;
 }
 
 span {
     font-weight: bold;
     text-decoration: underline;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+.footer_content {
+    height: 61px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.footer_content_text {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+}
+
+.footer_links_to_social_networks {
+    display: flex;
+    gap: 19px;
+    position: absolute;
+    right: 123px;
 }
 
 @font-face {
