--- a/travel/styles.css
+++ b/travel/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .wrapper {
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
     position: relative;
 }
@@ -35,7 +35,7 @@ header {
     background: rgba(242, 120, 92, 0.7);
     color: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
-    z-index: 2;
+    z-index: 20;
     position: absolute;
     top: 0;
     left: 0;
@@ -60,13 +60,34 @@ header {
     font-size: 16px;
     line-height: 21px;
 }
+.menu_adaptive_burger {
+    display: none;
+}
+
+.menu_adaptive_close {
+    display: none;
+}
+.burger_menu_overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 20;
+
+}
+.burger_menu_overlay.active {
+    display: block;
+}
+
 
 a {
     color: #FFFFFF;
     text-decoration: none;
 }
 
-a:hover {
+header a:hover {
     font-style: italic;
 }
 
@@ -101,8 +122,9 @@ a:hover {
 
 .preview {
     background-image: url(./images/main_background.jpg);
-    height: 765px;
+    height: 100%;
     margin-bottom: 80px;
+    padding-bottom: 254px;
 }
 
 .preview_content {
@@ -135,22 +157,22 @@ h1 {
     background: rgba(255, 255, 255, 0.7);
     border-radius: 16px;
     margin-top: 46px;
+    padding: 18px 18px 18px 32px;
 }
 
-.preview_content_text {
-    padding-left: 41px;
-    padding-top: 32px;
+.preview_content_text input {
+    padding-top: 14px;
     font-family: 'Aleo';
     font-style: italic;
     font-size: 24px;
     color: #F2785C;
+    background-color: transparent;
+    border: none;
+    outline: none;
 }
 
 .preview_content_button {
-    margin-right: 18px;
-    margin-left: auto;
-    margin-top: 18px;
-    margin-bottom: 254px;
+    margin-left:auto;
 }
 
 .preview_content_button button,
@@ -167,11 +189,15 @@ h1 {
     box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
     border-radius: 10px;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .steps_content {
     margin: 0 auto;
     text-align: center;
+    max-width: 1177px;
 }
 
 h2 {
@@ -182,10 +208,6 @@ h2 {
     color: #F2785C;
 }
 
-.steps_content {
-    height: 247px;
-    max-width: 1177px;
-}
 
 .steps_content_items {
     margin-top: 40px;
@@ -195,9 +217,9 @@ h2 {
 
 .steps_content_item {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
+    max-width: 33%;
 }
 
 .steps_content_item_bike,
@@ -212,12 +234,17 @@ h2 {
 
 .bike,
 .calendar,
-.plain {
+.plain,
+.steps_content_item_adaptive {
     position: absolute;
     left: 25%;
     right: 25%;
     top: 28%;
     bottom: 27%;
+}
+
+.steps_content_item_adaptive {
+    display: none;
 }
 
 .steps_content_text {
@@ -258,6 +285,10 @@ h2 {
     border-radius: 16px;
 }
 
+.destinations_slider_adaptive {
+    display: none;
+}
+
 .destinations_slider_text {
     position: absolute;
     text-align: left;
@@ -293,6 +324,7 @@ h2 {
     background: #F2785C;
 }
 
+
 .button {
     cursor: pointer;
 }
@@ -307,13 +339,6 @@ h2 {
     transform: translateY(2px);
 }
 
-.destinations_button,
-.stories_button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .destinations_button {
     margin-top: 40px;
 }
@@ -321,6 +346,10 @@ h2 {
 .destinations_button img,
 .stories_button img {
     margin-right: 12.5px;
+}
+
+.arrow_adaptive {
+    display: none;
 }
 
 .stories_content {
@@ -359,10 +388,11 @@ h2 {
 }
 
 .stories_content_photo {
-    width: 400px;
-    height: 250px;
     background: url(robin-noguier-sydwCr54rf0-unsplash.jpg);
     filter: drop-shadow(0px 4px 4px #0D606F);
+}
+.stories_content_photo_adaptive {
+    display: none;
 }
 
 .stories_content_photo img {
@@ -373,7 +403,7 @@ h3 {
     font-family: 'Aleo';
     font-style: normal;
     font-weight: 400;
-    font-size: 35px;
+    font-size: 35px;span
     color: #0D606F;
 }
 
@@ -390,17 +420,18 @@ h3 {
     color: #0D606F;
     margin-top: 24px;
 }
-
+.stories_desctiption_text a {
+    font-weight: bold;
+    text-decoration: underline;
+    color: #0D606F;
+}
 .stories_button {
     filter: drop-shadow(0px 0px 0px #0D606F);
     margin-top: 10px;
     margin-bottom: 41px;
 }
 
-span {
-    font-weight: bold;
-    text-decoration: underline;
-}
+
 
 footer {
     position: absolute;
@@ -441,6 +472,377 @@ footer {
     position: absolute;
     right: 123px;
 }
+
+.menu_header_adaptive {
+    display: none;
+}
+
+@media (max-width: 1320px){
+    .Login_pop_up button {
+        margin: 25px auto;
+    }
+    .menu_wrapper {
+        margin-right: 40px;
+    }
+    .menu_header {
+        margin-left: 40px;
+    }
+  
+    .stories_content_items {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    
+}
+
+@media (max-width: 1045px) {
+    body {
+        background: no-repeat;
+    }
+.logo_wrapper {
+    margin-left: 50px;
+}
+.portal {
+    font-size: 20px;
+    line-height: 25px;
+}
+.menu_header {
+    column-gap: 30px;
+    font-size: 14px;
+}
+h1 {
+    font-size: 60px;
+}
+.preview_content {
+    width: 90%;
+    margin-left: 30px;
+}
+.preview_content_item {
+    font-size: 15px;
+}
+.preview_content_text_box {
+    width: 100%;
+}
+.preview_content_text input{
+    font-size: 20px;
+}
+h2 {
+    font-size: 30px;
+}
+h3 {
+    font-size: 20px;
+}
+.steps_content_text {
+    font-size: 15px;
+}
+
+.stories_desctiption_text {
+    font-size: 15px;
+    margin-top: 10px;
+}
+.preview_content_button button, .destinations_button button, .stories_button button{
+    width: 170px;
+    height: 50px;
+    font-size: 20px;
+}
+
+}
+
+@media (max-width: 825px){
+    .wrapper {
+        max-width: 825px;
+    }
+    .menu_header {
+        column-gap: 10px;
+        flex-wrap: wrap;
+    }
+    .preview {
+        padding-bottom: 130px;
+
+    }
+    h1 {
+        font-size: 50px;
+        line-height: 60px;
+    }
+    .preview_content_text input{
+        font-size: 15px;;
+    }
+    .preview_content_button button, .destinations_button button, .stories_button button{
+        width: 120px;
+        height: 50px;
+        font-size: 12px;
+    }
+  
+  .stories_content_photo_img {
+    display: none;
+  }
+  .stories_content_photo_adaptive {
+    display: block;
+  }
+  .stories_description_block {
+    margin-left: 10px;
+}
+
+  .footer_links_to_social_networks {
+    right: 10px;
+  }
+}
+
+@media (max-width: 523px){
+    .menu_header {
+        margin-top: 15px;
+  } 
+  .portal {
+    display: none;
+}
+
+h2 {
+    font-size: 20px;
+}
+.preview_content_text input{
+    font-size: 14px;
+    line-height: 17px;
+    padding-left: 16px;
+    padding-top: 16px;
+}
+
+.arrow {
+    display: none;
+}
+.arrow_adaptive {
+    display: block;
+}
+.steps_content_item_adaptive {
+    display: block;
+}
+.bike, .calendar, .plain {
+display: none;
+}
+.steps_content_item_bike,
+.steps_content_item_calendar,
+.steps_content_item_plain {
+    width: 70px;
+    height: 70px;
+}
+
+.stories_desctiption_text {
+    font-size: 12px;
+}
+.stories_content_photo_adaptive img{
+    float: left;
+}
+  .footer_content_text {
+    display: none;
+  }
+  .footer_links_rs_git {
+    display: none;
+  }
+  .footer_links_to_social_networks {
+    position: relative;
+  }
+}
+
+@media (max-width: 390px){
+    .wrapper {
+        max-width: 390px;
+    }
+   
+    .Login_pop_up {
+        display: none;
+    }
+    header {
+        box-shadow: none;
+        background: linear-gradient(180deg, rgba(13, 96, 111, 1), rgba(13, 96, 111, 0) );
+        z-index: 20;
+    }
+
+     .menu_wrapper {
+        position: fixed;
+        padding: 44px 15px 20px 44px;
+      background: #F2785C;
+      border-radius: 10px;
+      display: block;
+      transform: translateX(260%);
+      transition: transform 0.5s; 
+      z-index: 30;
+      overflow: auto;
+    }
+    .menu_wrapper.active {
+        transform: translateX(160%);
+    }
+
+    .menu_adaptive_burger {
+        display: block;
+        position: fixed;
+        margin-top: 43px;
+        margin-left: 335px;
+        z-index:30;
+        overflow: hidden;
+    }
+    .menu_adaptive_close {
+        position: absolute;
+        display: block;
+        top: 16px;
+        left: 16px;
+    }
+    .menu_header {
+        flex-direction: column;
+        margin: 0;
+    }
+  
+    .menu_header_adaptive {
+        display: block;
+    }
+    .menu_header li {
+   margin-bottom: 10px;
+   text-align: right;
+    }
+    .logo_wrapper {
+        margin-top: 45px;
+        margin-left: 16px;
+    }
+    .preview {
+        background-image: url(./images/adaptive_main_background.jpg);
+        padding-bottom: 61px;
+        margin-bottom: 0;
+    }
+    h1 {
+        display: none;
+    }
+    .preview_content {
+        width: 91.9%;
+        margin-left: 15px;
+        margin-right: 15px;
+        padding-top: 96px;
+    }
+    .preview_content_item {
+        display: none;
+    }
+    .preview_content_text_box {
+        height: 48px;
+        padding: 9px 9px 9px 16px;
+    }
+    .preview_content_text input {
+        padding-top: 9px;
+        padding-left: 0;
+    }
+    .preview_content_button button,
+.destinations_button button,
+.stories_button button {
+    font-size: 11px;
+    width: 92px;
+    height: 30px;
+}
+
+    .steps_content {
+        margin-top: 20px;
+    }
+    h2 {
+        font-size: 14px;
+    }
+    .steps_content_items {
+    margin-top: 22px;
+    }
+    .steps_content_text {
+    font-size: 10px;
+    margin-top: 20px;
+    }
+    .destinations_content {
+        margin-top: 20px;
+    }
+    .destinations_slider_original {
+        display: none;
+    }
+    .destinations_slider_adaptive {
+        display: block;
+    }
+    .destinations_slider {
+        margin-top: 20px;
+        position: relative;
+    }
+    .destinations_slider_japan,
+    .destinations_slider_usa {
+        display: none;
+    }
+    .slider_arrows {
+        position: absolute;
+        display: flex;
+        z-index: 20;
+        gap: 309px;
+        margin-left: 11px;
+        margin-top: 92.5px;
+    }
+    .destinations_slider_text {
+        font-size: 20px;
+        left: 15px;
+        top: 8px;
+    }
+    .destinations_circles {
+        gap: 6px;
+        margin-top: -20px;
+        z-index: 10;
+        }
+    .circle_1,
+    .circle_2,
+    .circle_3 {
+        width: 8px;
+        height: 8px;
+    }
+    .circle_2,
+.circle_3 {
+    background: rgba(242, 120, 92, 0.5);
+}
+
+.circle_1 {
+    background: #F2785C;
+}
+    .destinations_button {
+        margin-top: 22px;
+    }
+    .destinations_button img, .stories_button img {
+        margin-right: 6px;
+    }
+
+    .stories_content {
+        margin-top: 20px;
+    }
+    .stories_content_bg {
+        background-image: url(./images/stories_adaptive.jpg);
+        padding-bottom: 64px;
+    }
+    .stories_content_items {
+        margin-top: 10px;
+    }
+    .stories_content_items {
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 10px;
+        gap: 15px;
+    }
+    
+    h3 {
+        font-weight: 700;
+        font-size: 11px;
+        padding-top: 5px;
+    }
+    .stories_desctiption_text {
+        font-size: 9px;
+    }
+    .stories_text_close {
+        display: none;
+    }
+    .stories_button {
+
+        margin: -4px auto 13px auto;
+    }
+    .footer_links_to_social_networks {
+        right: 6px;
+    }
+
+}
+
+
+
 
 @font-face {
     font-family: "Magra";
